# NextWordHorizon

./: .gitignore  CHANGES_SUMMARY.md  FIX_VENV.md  INSTALLATION_STATUS.md  MONTE_CARLO_INTEGRATION.md  QUICKSTART_QWEN.md  QWEN_GUIDE.md  README.md  main.py  pyproject.toml
api/: __init__.py  server.py
horizon_core/: __init__.py  adapters.py  config.py  horizon.py  metrics.py  models.py  monte_carlo_adapter.py  projection.py  sampled_steps_to_horizon.py
src/sampling/: __init__.py  monte_carlo_sampler.py
ui/: __init__.py  app.py
